--- a/unit_2/suy-dien.ipynb
+++ b/unit_2/suy-dien.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### B. Khởi tạo student-t distribution (độ tự do =9, trung bình =0, độ lệch chuẩn =1)"
+    "### B. Khởi tạo student-t distribution (độ tự do =9, trung bình =0, độ lệch chuẩn =1)"
    ]
   },
   {
