them bayes roi rac

--- a/unit_2/bien-roi-rac.ipynb
+++ b/unit_2/bien-roi-rac.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "## Biến nhị phân\n",
-    "Biểu diễn bằng tần số f.  \n",
+    "Biểu diễn bằng tỉ lệ (proportion).  \n",
     "Giả sử ta có dãy dữ liệu sau:"
    ]
   },
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tần số f là:"
+    "Tỉ lệ p là:"
    ]
   },
   {
@@ -87,9 +87,9 @@
    "metadata": {},
    "source": [
     "## Biến xếp hạng\n",
-    "Biểu diễn bằng tần số f.  \n",
+    "Biểu diễn bằng tỉ lệ.  \n",
     "Thường được mã hoá bằng những con số như 0, 1, 2,...  \n",
-    "Vấn đề là khoảng cách giữa 2 số mã hoá có thực sự cân bằng không?  \n",
+    "### Vấn đề là khoảng cách giữa 2 số mã hoá có thực sự cân bằng không?  \n",
     "Ví dụ như:  \n",
     "\n",
     "|Nhóm | HA bình thường | Tiền THA | THA độ I | THA độ II |\n",
@@ -205,6 +205,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Với *One hot encoding*, các nhóm sẽ độc lập và không còn tương tác. Chúng ta có thể dễ dàng phân tích và xây hệ thống tính điểm hơn."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -283,13 +290,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Với phương pháp one hot encoding, bạn có thể dễ dàng phân tích và xây hệ thống tính điểm hơn."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Plotting cho các nhóm biến rời rạc"
    ]
   },
@@ -354,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
