update bayes roi rac

--- a/unit_4/bayes-roi-rac.ipynb
+++ b/unit_4/bayes-roi-rac.ipynb
@@ -4,21 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>BAYESIAN THEOREM</br>*For Discrete Events*</center>\n",
+    "# <center>BAYESIAN THEOREM</br><i>For Discrete Events</i></center>\n",
     "\n",
-    "## I. Bayesian theorem với 2 Events\n",
+    "# I. Một vài định nghĩa\n",
     "\n",
-    "$$ P(A|B) = \\frac{P(B \\cap A)}{P(B)} = \\frac{P(B|A)\\times P(A)}{P(B)}$$\n",
-    "\n",
-    "$$ P(B) = P(B|A)P(A) + P(B|A^c)P(A^c) \\: \\text{với} \\: A^c = 1-A $$\n",
-    "\n"
+    "- **P(A|B)**: Xác suất của event A trong điều kiện B\n",
+    "- **A và B độc lập nghĩa là**: P(A|B) = P(A)\n",
+    "- **P(A $\\cap$ B)**: Xác suất vừa event A vừa event B, tiếng anh là \"and\", \"intersect\"\n",
+    "- **P(A $\\cup$ B)**: Xác suất event A hoặc event B, tiếng anh là \"or\", \"union\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# II. Bayesian theorem với nhiều Events \n",
+    "# II. Bayesian theorem\n",
+    "\n",
+    "$$ P(A|B) = \\frac{P(B \\cap A)}{P(B)} = \\frac{P(B|A)\\times P(A)}{P(B)}$$\n",
+    "\n",
+    "$$ P(B) = P(B|A)P(A) + P(B|A^c)P(A^c)$$\n",
+    "\n",
+    "A$^c$ là complement event của A => P(A$^c$) = 1 - P(A)  \n",
+    "Từ công thức, ta có: \n",
+    "$$ P(A|B)\\times P(B) = P(B|A)\\times P(A) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# III. Bayesian theorem với nhiều Events \n",
     "\n",
     "$$ P(A_1|B) = \\frac{P(B|A_1)\\times P(A_1)}{P(B)} $$\n",
     "\n",
@@ -26,7 +41,7 @@
     "\n",
     "$$ \\text{or}\\: P(B) = \\sum_{i=1}^{n}P(B|A_n)P(A_n) $$\n",
     "\n",
-    "**Điều kiện:** Các event $A_i$ độc lập với nhau và $\\sum_{i=1}^{n}P(A_i)=1$"
+    "**Điều kiện:** Các event $A_i$ không overlap với nhau và $\\sum_{i=1}^{n}P(A_i)=1$"
    ]
   },
   {
