--- a/unit_2/suy-dien.ipynb
+++ b/unit_2/suy-dien.ipynb
@@ -67,7 +67,14 @@
     "## IV. Tuy nhiên, điều kiện để dùng công thức này là cỡ mẫu $\\ge$ 30\n",
     "Nếu cỡ mẫu < 30 thì ta phải thay con số 1.96 bằng kết quả  \n",
     "Percent point function (ppf) của student-t distribution có degree of freedom là **n-1**. (n là cỡ mẫu)  \n",
-    "**Khi n$\\ge$30 thì phân phối student-t = phân phối normal.**"
+    "**Khi n$\\ge$30 thì phân phối student-t = phân phối normal.**\n",
+    "\n",
+    "Đối với **proportion** thì điều kiện là np$\\geq$5 và n(1-p)$\\geq$5.  \n",
+    "\n",
+    "|Type      | Condition to use 1.96 - PDF(normal-distribution) =95%)|\n",
+    "|----------|--------------------------------|\n",
+    "|Mean      |$ n\\geq 30 $                    |\n",
+    "|Proportion|$ \\text{min}[np, n(1-p)]\\geq 5 $|"
    ]
   },
   {
@@ -266,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
