--- a/unit_2/suy-dien-2.ipynb
+++ b/unit_2/suy-dien-2.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# I. Nói về student-t distribution\n",
     "- Giống như normal distribution nhưng mập và lùn hơn.  \n",
-    "- Đại diện bởi 3 giá trị: độ tự do, trung bình, độ biến thiên. $ t(\\text{dof}, n , \\sigma^2)$\n",
+    "- Đại diện bởi 3 giá trị: độ tự do, trung bình, độ biến thiên. $ t(\\text{dof}, \\mu , \\sigma^2)$\n",
     "- Khi dof tăng dần lên >30 thì trở thành normal distribution.  \n",
     "\n",
     "<center>$\\nu$ là dof, hình vẽ PDF(Probability density function) của 4 phân phối student-t với dof tăng dần</center>\n",
