--- a/unit_2/suy-dien-2.ipynb
+++ b/unit_2/suy-dien-2.ipynb
@@ -82,7 +82,7 @@
     "$$ \\ln{\\text{OR}} \\pm 1.96 \\sqrt{\\frac{1}{x_1} + \\frac{1}{x_2} + \\frac{1}{n_1-x_1} + \\frac{1}{n_2-x_2}  }$$\n",
     "$$ \\text{Khoảng tin cậy OR} = (e^{\\text{lower value}}, e^{\\text{upper value}} )$$\n",
     "\n",
-    "**Nếu RR hoặc OR =1 có khoảng tin cậy chứa 1 => 2 quần thể khác biệt không có ý nghĩa thống kê.**"
+    "**Nếu RR hoặc OR có khoảng tin cậy chứa 1 => Hai quần thể khác biệt không có ý nghĩa thống kê.**"
    ]
   }
  ],
