--- a/unit_2/thong-ke-la-gi.ipynb
+++ b/unit_2/thong-ke-la-gi.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dang1.png\" width=350 height=350>"
+    "<img src=\"../images/dang1.png\" width=350 height=350>"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dang2.png\" width=350 height=350>"
+    "<img src=\"../images/dang2.png\" width=350 height=350>"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dang3.png\" width=350 height=350>"
+    "<img src=\"../images/dang3.png\" width=350 height=350>"
    ]
   },
   {
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dang4.png\" width=350 height=350>"
+    "<img src=\"../images/dang4.png\" width=350 height=350>"
    ]
   },
   {
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/dang5.png\" width=350 height=350>"
+    "<img src=\"../images/dang5.png\" width=350 height=350>"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
