--- a/unit_4/mot-vai-phan-phoi.ipynb
+++ b/unit_4/mot-vai-phan-phoi.ipynb
@@ -20,6 +20,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Indicator function\n",
+    "\n",
+    "$$ I_{\\{A\\}}(x) = \n",
+    "  \\begin{cases}\n",
+    "    1  &  \\text{if } A \\text{ is True}\\\\\n",
+    "    0  &  \\text{if } A \\text{ is False}\n",
+    "  \\end{cases}\n",
+    "$$\n",
+    "\n",
+    "Có thể viết tắt là $ I_{\\{A\\}} $  ~ bỏ (X).  \n",
+    "Ví dụ: với x=3 thì:\n",
+    "- $ I_{\\{2<x<10\\}} = 1$\n",
+    "- $ I_{\\{x<0\\}} = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Expected Value\n",
+    "Là tổng của tất cả giá trị thực nhân trọng số. Đối với biến liên tục thì dùng tích phân.\n",
+    "- Discrete: $E[X]=\\displaystyle\\sum_{x} xP(X =x)=\\displaystyle\\sum_{x} xf(x)$\n",
+    "- Continuous: $E[X]=\\int_{-\\infty}^\\infty xf(x)dx$  \n",
+    "\n",
+    "Expected value có thể xem như là số trung bình.  \n",
+    "##### Một số đặc tính của Expected Value:\n",
+    "- $ E[aX+bY+c] = aE[X] + bE[Y] +c $\n",
+    "- $ E[g(X)] = \\int_{-\\infty}^\\infty g(x)f(x)dx$  \n",
+    "- $ g(E[X]) \\neq E[g(X)] $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variance\n",
+    "Phương sai: Dùng để định lượng sự biến thiên của một biến.\n",
+    "$$ \\text{Var}[X] = E[(X-\\mu)^2]$$\n",
+    "\n",
+    "- Discrete: $ \\text{Var}[X] = \\displaystyle\\sum_x \\Big( (x-\\mu)^2f(x) \\Big)$\n",
+    "- Continuous: $ \\text{Var}[X] = \\int_{-\\infty}^{\\infty} (x-\\mu)^2f(x)dx$\n",
+    "\n",
+    "Công thức rút gọn: $ \\text{Var}[X] = E[X^2] - E[X]^2 $  \n",
+    "Căn bậc hai của Variance là Standard deviation (độ lệch chuẩn).  \n",
+    "##### Một số đặc tính của Variance:\n",
+    "- $ \\text{Var}[aX+bY+c] = a^2\\text{Var}[X] + b^2\\text{Var}[Y] $\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Thực hành với E[X], Var[X]\n",
+    "Một biến số có phân phối theo hàm PDF = $f(x) = 3x^2. I_{\\{0\\leq x\\leq 1\\}}(x)$\n",
+    "\n",
+    "Expected Value:  \n",
+    "$ E[X] = \\int_{-\\infty}^\\infty xf(x)dx = \\int_0^1 x.3x^2dx = \\left.\\frac{3x^4}{4}\\right|_0^1=\\frac{3}{4}$\n",
+    "\n",
+    "Expected Value với g(x) = x$^2$:  \n",
+    "$ E[X^2] = \\int_{-\\infty}^\\infty x^2f(x)dx = \\int_0^1 x^2.3x^2dx = \\left.\\frac{3x^5}{5}\\right|_0^1=\\frac{3}{5}$  \n",
+    "\n",
+    "Variance:  \n",
+    "$ \\text{Var}[X] = E[X^2] - E[X]^2 = \\frac{3}{5} - (\\frac{3}{4})^2 = \\frac{3}{80} $"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -47,11 +118,8 @@
     "# [BERNOULLI DISTRIBUTION](https://en.wikipedia.org/wiki/Bernoulli_distribution)\n",
     "Là phân phối của tỉ lệ ra event  \n",
     "$$ X \\sim B(p) $$\n",
-    "$$ \\text{PMF} = \n",
-    "\\begin{cases}\n",
-    "1-p \\;& \\text{with x=0} \\\\\n",
-    "p   \\;& \\text{with x=1}\n",
-    "\\end{cases}$$\n",
+    "$$ \\text{PMF} = pI_{\\{x=1\\}} $$   \n",
+    "\n",
     "$$ E[X] = p \\quad \\text{Var}[X]= p(1-p)$$"
    ]
   },
@@ -866,6 +934,54 @@
     "    plt.plot(arr, st.t(df=i).pdf(arr), label=f\"df={i}\")\n",
     "plt.legend();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asd\n"
+     ]
+    }
+   ],
+   "source": [
+    "if True:\n",
+    "    print(\"asd\")\n",
+    "else:\n",
+    "    print(\"cbf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-558641a994d4>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-558641a994d4>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    if 1 + 1 == 3 True:\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 1 + 1 == 3:\n",
+    "    print(\"yes\")\n",
+    "else:\n",
+    "    print(\"no\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
