--- a/unit_4/bayes-lien-tuc.ipynb
+++ b/unit_4/bayes-lien-tuc.ipynb
@@ -25,7 +25,35 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# II. Một số quy ước Toán học:\n",
+    "# II. Bayesian for continuous events:\n",
+    "Cho một biến số theo một phân phối nào đó có PDF = $ f(\\theta)$, thì với điều kiện y thì $ f(\\theta | y) $ là:  \n",
+    "\n",
+    "$$ f(\\theta|y) = \\frac{f(y|\\theta)f(\\theta)}{f(y)} =  \\frac{f(y|\\theta)f(\\theta)}{\\int{f(y|\\theta)f(\\theta)d\\theta}}$$\n",
+    "\n",
+    "**Bayesian có thể ngôn ngữ hóa như sau:**  \n",
+    "\n",
+    "$$ \\text{Posterior} = \\frac{\\text{Likelihood} \\times \\text{Prior}}{\\text{Normalizing Constant}} $$\n",
+    "- $ f(\\theta|y)$: posterior  \n",
+    "    Là PDF của phân phối sau khi được likelihood update cho Prior\n",
+    "- $ f(y|\\theta)$: likelihood  \n",
+    "- $ f(\\theta)$: prior  \n",
+    "    Là phân phối của $\\theta$ trước khi update.  \n",
+    "    Nếu chưa có thì có thể dùng Uniform(0,1)\n",
+    "- $ f(y)$: normalizing constant  \n",
+    "    thường bằng 1 hoặc một hằng số nào đó .  \n",
+    "    Cho nên hình dạng posterior distribution không phụ thuộc vào nó\n",
+    "\n",
+    "Ta có thể viết lại như sau ( $\\propto$ là `proportion to`; tỉ lệ thuận, đồng dạng )  \n",
+    "$$ \\text{Posterior} \\propto (\\text{Likelihood} \\times \\text{Prior}) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# III. Nói về Likelihood\n",
+    "##  Một số quy ước Toán học:\n",
     "\n",
     "- Hàm Sum:  \n",
     "    - $ \\sum_{x=1}^n x_i = x_1 + x_2 + \\dots + x_n $\n",
@@ -56,8 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "# III. Likelihood function \n",
+    "## Likelihood function \n",
     "là hàm xác suất của params khi cho dataset.  \n",
     "Ví dụ: dataset X theo phân phối có PDF = f(x) có params là $\\theta$  \n",
     "thì likelihood function = L($\\theta$ | X) = $\\Pi_{x=1}^{n} \\text{PDF}(x)$  \n",
@@ -139,17 +166,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Maximum likelihood estimation (MLE)\n",
+    "là phương pháp tính ra cụ thể params sao cho xác suất xảy ra dataset là cao nhất dựa trên likelihood.  \n",
+    "Với ví dụ trên thì MLE là đỉnh của đồ thị ~ 0.55.   \n",
+    "\n",
+    "Ta có thể dùng toán học để tìm nó, bằng cách dùng đạo hàm để tìm cực trị.  \n",
+    "( Find the critical value using calculus).  \n",
+    "Tuy nhiên đạo hàm thường khó: như $(UV)' = U'V + UV'$.  \n",
+    "Cách phố biến là dùng hàm log(likelihood), vì hàm log(f) sẽ cùng chiều  với hàm f (đã nói ở trên) nên, max của hàm log sẽ là max của hàm f. Ta tìm max bằng đạo hàm và đặt đạo hàm = zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
-    "# IV. Maximum likelihood estimation (MLE)\n",
-    "là phương pháp chọn params sao cho xác suất xảy ra dataset là cao nhất.  \n",
-    "Nếu phân phối đơn giản ta có thể dùng đồ họa để tìm MLE.(như ví dụ đồng xu ở trên)  \n",
-    "\n",
-    "Hoặc có thể dùng toán học bằng cách phố biến là dùng hàm log(likelihood), vì hàm log(f) sẽ cùng chiều  với hàm f (đã nói ở trên) nên, max của hàm log sẽ là max của hàm f. Ta tìm max bằng đạo hàm và đặt đạo hàm = zero.\n",
-    "\n",
-    "**Ví dụ:**  \n",
-    "binom distribution có PDF = $ \\text{PMF} = C^n_xp^x(1-p)^{n-x} $  \n",
+    "# Dùng likelihood trong frequentist inference\n",
+    "**Ví dụ 1:**  \n",
+    "binom distribution = $ \\text{PMF} = C^n_xp^x(1-p)^{n-x} $  \n",
     "với dataset cố định thì n, x, $C^n_x$ là hằng số.  \n",
-    "bài toán là tìm p để xác suất ra dataset là lớn nhất => Tìm argmax $p^x(1-p)^{n-x}$ với p là biến quan tâm.  \n",
+    "bài toán là tìm p để xác suất ra dataset là lớn nhất  \n",
+    "=> Tìm argmax likelihood.  \n",
+    "=> likelihood = $p^x(1-p)^{n-x}$ với p là biến quan tâm.  \n",
     "Ta có:  \n",
     "loglikelihood = $ x\\log(p) + (n-x)\\log(1-p)$  \n",
     "đạo hàm = $ \\frac{x}{p} - \\frac{n-x}{1-p} $  \n",
@@ -167,41 +205,10 @@
     "loglikelihood = $ n\\log(\\lambda) - \\lambda \\sum x $  \n",
     "đạo hàm = $\\frac{n}{\\lambda} - \\sum x $   \n",
     "đạo hàm =0 $ \\implies \\frac{n}{\\lambda} - \\sum x = 0 \\implies \\lambda=\\frac{n}{\\sum x} $ = 1/ trung bình  \n",
+    "Khoảng tin cậy 95% của $\\lambda$ = $\\lambda \\pm 1.96\\frac{1}{\\lambda\\sqrt{n}}$\n",
     "\n",
     "**Tương tự**: với pp loglikelihood: dataset $\\sim$ normal distribution thì MLE cho $\\mu$ là trung bình của dataset"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# V. Bayesian for continuous events:\n",
-    "Cho một biến số theo một phân phối nào đó có PDF = $ f(\\theta)$, thì với điều kiện y thì $ f(\\theta | y) $ là:  \n",
-    "\n",
-    "$$ f(\\theta|y) = \\frac{f(y|\\theta)f(\\theta)}{f(y)} =  \\frac{f(y|\\theta)f(\\theta)}{\\int{f(y|\\theta)f(\\theta)d\\theta}}$$\n",
-    "\n",
-    "**Bayesian có thể ngôn ngữ hóa như sau:**  \n",
-    "\n",
-    "$$ \\text{Posterior} = \\frac{\\text{Likelihood} \\times \\text{Prior}}{\\text{Normalizing Constant}} $$\n",
-    "- $ f(\\theta|y)$: posterior  \n",
-    "    Là PDF của phân phối sau khi được likelihood update cho Prior\n",
-    "- $ f(y|\\theta)$: likelihood  \n",
-    "- $ f(\\theta)$: prior  \n",
-    "    Là PDF của phân phối\n",
-    "- $ f(y)$: normalizing constant  \n",
-    "    thường được quy ước thành 1 hoặc một con số thích hợp.  \n",
-    "    Và hình dạng posterior distribution không phụ thuộc vào nó\n",
-    "\n",
-    "$$ \\text{Posterior} \\propto (\\text{Likelihood} \\times \\text{Prior}) $$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -220,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
