--- a/unit_4/bayes-lien-tuc.ipynb
+++ b/unit_4/bayes-lien-tuc.ipynb
@@ -207,7 +207,9 @@
     "đạo hàm =0 $ \\implies \\frac{n}{\\lambda} - \\sum x = 0 \\implies \\lambda=\\frac{n}{\\sum x} $ = 1/ trung bình  \n",
     "Khoảng tin cậy 95% của $\\lambda$ = $\\lambda \\pm 1.96\\frac{1}{\\lambda\\sqrt{n}}$\n",
     "\n",
-    "**Tương tự**: với pp loglikelihood: dataset $\\sim$ normal distribution thì MLE cho $\\mu$ là trung bình của dataset"
+    "**Thực tế**: $\\overline{x}$ (trung bình của dataset) thường liên quan tới MLE của nhiều phân phối.  \n",
+    "Nếu A, B, C là phân phối Bernoulli(p), Poisson($\\lambda$), Normal($\\mu,\\sigma^2$)  \n",
+    "Thì $\\overline{x}$ là MLE cho p, $\\lambda, \\mu$ "
    ]
   }
  ],
