--- a/unit_4/mot-vai-phan-phoi.ipynb
+++ b/unit_4/mot-vai-phan-phoi.ipynb
@@ -821,6 +821,11 @@
     "---\n",
     "# [BETA DISTRIBUTION](https://en.wikipedia.org/wiki/Beta_distribution)\n",
     "Là phân phối random dựa trên X từ (0, 1) với 2 thông số alpha, beta.  \n",
+    "Thường được dùng để mô tả xác suất p của biến nhị phân, với  \n",
+    "- $\\alpha=k, \\; \\beta=n-k$  hoặc  \n",
+    "- $\\alpha=p, \\; \\beta=1-p$.  \n",
+    "Ví dụ:  \n",
+    "Với đồng xu có p(head) = 0.5 thì beta(0.5, 0.5) có p(head) = p(tail)( p(0)=p(1) ) ( xem đồ thị ). \n",
     "$$ X \\sim \\text{Beta}(\\alpha, \\beta) \\quad \\text{with}\\: \\alpha>0, \\beta>0$$\n",
     "$$ \\text{PDF} = \\frac{\\Gamma(\\alpha+\\beta)}{\\Gamma(\\alpha)\\Gamma(\\beta)}x^{\\alpha-1}(1-x)^{\\beta-1}I_{\\{0< x< 1\\}}$$\n",
     "$$ E[X] = \\frac{\\alpha}{\\alpha+\\beta} \\quad \\text{Var}[X] = \\frac{\\alpha\\beta}{(\\alpha+\\beta)^2(\\alpha+\\beta+1)} $$\n"
