--- a/unit_2/kiem-dinh.ipynb
+++ b/unit_2/kiem-dinh.ipynb
@@ -17,7 +17,7 @@
     "- Thời gian chờ khám\n",
     "- ...\n",
     "\n",
-    "Ta thu thập dữ liệu và tính xác suất giả định này là **Đúng**."
+    "Ta thu thập dữ liệu và tính xác suất để thông số của dữ liệu xảy ra khi giả định là **Đúng**."
    ]
   },
   {
