--- a/unit_4/mot-vai-phan-phoi.ipynb
+++ b/unit_4/mot-vai-phan-phoi.ipynb
@@ -822,8 +822,7 @@
     "# [BETA DISTRIBUTION](https://en.wikipedia.org/wiki/Beta_distribution)\n",
     "Là phân phối random dựa trên X từ (0, 1) với 2 thông số alpha, beta.  \n",
     "Thường được dùng để mô tả xác suất p của biến nhị phân, với  \n",
-    "- $\\alpha=k, \\; \\beta=n-k$  hoặc  \n",
-    "- $\\alpha=p, \\; \\beta=1-p$.  \n",
+    "- $\\alpha=k+1, \\; \\beta=n-k+1$  \n",
     "Ví dụ:  \n",
     "Với đồng xu có p(head) = 0.5 thì beta(0.5, 0.5) có p(head) = p(tail)( p(0)=p(1) ) ( xem đồ thị ). \n",
     "$$ X \\sim \\text{Beta}(\\alpha, \\beta) \\quad \\text{with}\\: \\alpha>0, \\beta>0$$\n",
