--- a/unit_2/kiem-dinh-2.ipynb
+++ b/unit_2/kiem-dinh-2.ipynb
@@ -37,7 +37,7 @@
     "3. [t-test trung bình 2 mẫu liên quan](#t-test-trung-b%C3%ACnh-2-m%E1%BA%ABu-li%C3%AAn-quan)\n",
     "4. [t-test proportion 1 sample](#t-test-proportion-1-sample)\n",
     "5. [t-test proportion 2 mẫu độc lập](#t-test-proportion-2-m%E1%BA%ABu-%C4%91%E1%BB%99c-l%E1%BA%ADp)\n",
-    "6. [t-test proportion 2 mẫu liên quan](#t-test-proportion-2-m%E1%BA%ABu-li%C3%AAn-quan)\n",
+    "6. [chi-squared-test proportion 2 mẫu liên quan](#chi-squared-test-proportion-2-m%E1%BA%ABu-li%C3%AAn-quan)\n",
     "7. [chi-squared test cho 1 sample đa nhóm](#N%C3%B3i-v%E1%BB%81-Chi-squared-distribution)\n",
     "7. [chi-squared test cho nhiều samples đa nhóm](#chi-squared-test-nhi%E1%BB%81u-samples-v%E1%BB%9Bi-bi%E1%BA%BFn-%C4%91a-nh%C3%B3m)"
    ]
@@ -105,11 +105,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## t-test proportion 2 mẫu liên quan\n",
+    "## chi-squared test proportion 2 mẫu liên quan\n",
     "- Là sample trước và sau can thiệp, hoặc sau 1 khoảng thời gian\n",
     "- **Null hypothesis**: proportion trước và sau không thay đổi\n",
     "- Còn gọi là McNemar test\n",
     "- Sử dụng Chi-squared distribution\n",
+    "- Nếu cỡ mẫu ít quá, thì dùng exact mcnemar với binomial distribution\n",
     "- [statsmodels.sandbox.stats.runs.mcnemar](https://www.statsmodels.org/stable/generated/statsmodels.sandbox.stats.runs.mcnemar.html#statsmodels.sandbox.stats.runs.mcnemar)"
    ]
   },
@@ -362,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
