--- a/unit_2/kiem-dinh-2.ipynb
+++ b/unit_2/kiem-dinh-2.ipynb
@@ -120,6 +120,7 @@
    "source": [
     "---\n",
     "# Nói về [Chi-squared distribution](https://en.wikipedia.org/wiki/Chi-squared_distribution)\n",
+    "# chi-squared test cho 1 sample đa nhóm\n",
     "$ x = \\sum_1^{k+1}\\frac{(Observe - Expect)^2}{Expect} \\sim \\chi^2 (k) \\quad \\text{ k là độ tự do} $  \n",
     "Ví dụ: trong biến outcome có 5 nhóm, thì k = 5-1 = 4 độ tự do  \n",
     "Chi-squared distribution là one-tailed"
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +199,7 @@
        "array([282. , 117.5,  70.5])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +221,7 @@
        "Power_divergenceResult(statistic=8.457446808510639, pvalue=0.014570979931304122)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
        "        [27.12765957, 13.29787234,  9.57446809]]))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,53 +299,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "# Fisher exact test cho biến nhị phân vầ 2 nhóm ( contigency 2x2 table)\n",
+    "- [scipy.stats.fisher_exact](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.fisher_exact.html)\n",
+    "- Đối với mẫu quá nhỏ thì pvalue của chisquared không còn chính xác.\n",
+    "- Cho nên với bảng 2x2 thì fisher exact tốt hơn.  \n",
+    "- Sử dụng Hypergeometric distribution.\n",
+    "- **Null hypothesis**: Group độc lập với outcome\n",
+    "||Men|Women|\n",
+    "|-|-|-|\n",
+    "|Studying|1|9|\n",
+    "|Not-studying|11|3|\n",
+    "\n",
+    "Ví dụ:  \n",
+    "Null hypothesis: Chuyện học hành không liên quan với giới tính. Ta thu thập data như trên"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.030303030303030304, 0.0027594561852200745)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.array([[ 1, 9],\n",
+    "                 [11, 3]])\n",
+    "\n",
+    "# output (odd ratio, pvalue)\n",
+    "st.fisher_exact(data)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Giả sữ chuyện học không liên quan giới tính, Thì xác suất ra data này là 3%. H0 vô hiệu. Vậy học hành có liên quan với giới tính."
+   ]
   }
  ],
  "metadata": {
