--- a/unit_2/kiem-dinh-2.ipynb
+++ b/unit_2/kiem-dinh-2.ipynb
@@ -39,7 +39,8 @@
     "5. [t-test proportion 2 mẫu độc lập](#t-test-proportion-2-m%E1%BA%ABu-%C4%91%E1%BB%99c-l%E1%BA%ADp)\n",
     "6. [chi-squared-test proportion 2 mẫu liên quan](#chi-squared-test-proportion-2-m%E1%BA%ABu-li%C3%AAn-quan)\n",
     "7. [chi-squared test cho 1 sample đa nhóm](#N%C3%B3i-v%E1%BB%81-Chi-squared-distribution)\n",
-    "7. [chi-squared test cho nhiều samples đa nhóm](#chi-squared-test-nhi%E1%BB%81u-samples-v%E1%BB%9Bi-bi%E1%BA%BFn-%C4%91a-nh%C3%B3m)"
+    "8. [chi-squared test cho nhiều samples đa nhóm](#chi-squared-test-nhi%E1%BB%81u-samples-v%E1%BB%9Bi-bi%E1%BA%BFn-%C4%91a-nh%C3%B3m)\n",
+    "9. [Fisher exact test for 2x2 table với biến nhị phân](#Fisher-exact-test-cho-bi%E1%BA%BFn-nh%E1%BB%8B-ph%C3%A2n-v%E1%BA%A7-2-nh%C3%B3m-(-contigency-2x2-table))"
    ]
   },
   {
@@ -303,7 +304,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Fisher exact test cho biến nhị phân vầ 2 nhóm ( contigency 2x2 table)\n",
+    "# Fisher exact test cho biến nhị phân và 2 nhóm ( contingency 2x2 table)\n",
     "- [scipy.stats.fisher_exact](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.fisher_exact.html)\n",
     "- Đối với mẫu quá nhỏ thì pvalue của chisquared không còn chính xác.\n",
     "- Cho nên với bảng 2x2 thì fisher exact tốt hơn.  \n",
