--- a/unit_4/choosing-prior.ipynb
+++ b/unit_4/choosing-prior.ipynb
@@ -7,13 +7,13 @@
     "# <center>CHOOSING PRIOR</center>\n",
     "- Việc chọn prior không nên chọn 1 giá trị, mà chọn 1 phân phối.  \n",
     "~Bạn không cần thu thập data nếu bạn tin chắc điều đó sẽ xảy ra hoặc không xảy ra.\n",
-    "- Chọn prior sao cho data bạn thu thập nằm trong khoảng 95% của phân phối sẽ chọn làm prior.  \n",
-    "~Chúng ta sẽ dùng predictive distribution để tìm khoảng 95% này\n",
-    "- Để thuận tiện cho việc tính toán, ta thường chọn [conjugate prior](https://en.wikipedia.org/wiki/Conjugate_prior)  \n",
-    "Conjugate distributions là family những distributions mà có prior giống như posterior.  \n",
-    "Conjugate prior là prior cho likelihood.  \n",
+    "- Trong bài trước có nói chọn prior bằng 2 cách:\n",
+    "    - Chọn 1 prior nào đó có prior predictive distribution chứa 95% mẫu mình sẽ thu thập.\n",
+    "    - Chọn [conjugate prior](https://en.wikipedia.org/wiki/Conjugate_prior) . **Cách này dùng nhiều hơn**\n",
+    "\n",
+    "Conjugate prior là prior cho likelihood để ra posterior giống prior  \n",
     "Ví dụ:  \n",
-    "    - beta posterior $\\propto$ bernoulli/binomial likelihood $\\times$ beta prior\n",
+    "    - beta posterior $\\propto$ bernoulli/binomial likelihood $\\times$ beta prior  \n",
     "    - norm $\\propto$ norm $\\times$ norm  \n",
     "    - gamma $\\propto$ exponential $\\times$ gamma\n"
    ]
@@ -26,15 +26,24 @@
     "# Prior predictive distribution\n",
     "$ \\text{Prior} = f(\\theta) $  \n",
     "$ f(x) = \\int f(x|\\theta)f(\\theta)d\\theta$  \n",
-    "Giả sử prior là uniform, PDF là binom(10, $\\theta$)  \n",
+    "Giả sử đồng xu chưa biết p(head) thế nào, tao tung đồng xu 10 lần.  \n",
+    "=> prior là uniform, PDF là binom(n=10, p=$\\theta$)  \n",
     "prior predictive distribution là function xem x là biến, ngược với likelihood xem theta là biến.  \n",
     "$ f(x) = \\int_0^1 C^{10}_x \\theta^x (1-\\theta)^{10-x} dx$  \n",
-    "$ = \\int_0^1 \\frac{\\Gamma(11)}{\\Gamma(x+1)\\Gamma(11-x)}\\theta^{(x+1)-1}(1-\\theta)^{11-x-1}d\\theta $  \n",
-    "$ = \\frac{\\Gamma(11)}{\\Gamma(12)} \\int_0^1 \\frac{\\Gamma(12)}{\\Gamma(x+1)\\Gamma(11-x)}\\theta^{(x+1)-1}(1-\\theta)^{11-x-1}d\\theta $  \n",
-    "$ = \\frac{\\Gamma(11)}{\\Gamma(12)} \\int_0^1(\\text{PDF Beta}(\\alpha=x+1; \\beta=11-x)) $  \n",
-    "$ = \\frac{\\Gamma(11)}{\\Gamma(12)} = \\frac{1}{11}$  \n",
+    "$ = \\int_0^1 \\frac{10!}{x!(10-x)!}\\theta^{x}(1-\\theta)^{10-x}d\\theta $  \n",
     "\n",
-    "Nghĩa là với xác suất là đều nhau với mọi theta, thì xác suất ra 0,1,.. hoặc 10 heads là bằng nhau"
+    "Nhắc lại:\n",
+    "- $\\Gamma(x) = (x-1)!$\n",
+    "- f(x) khá giống với pdf của beta distribution $\\text{PDF} = \\frac{\\Gamma(\\alpha+\\beta)}{\\Gamma(\\alpha)\\Gamma(\\beta)}x^{\\alpha-1}(1-x)^{\\beta-1}I_{\\{0< x< 1\\}}$\n",
+    "- Ta sẽ chuyển f(x) thành beta\n",
+    "\n",
+    "$ f(x)= \\int_0^1 \\frac{\\Gamma(11)}{\\Gamma(x+1)\\Gamma(11-x)}\\theta^{(x+1)-1}(1-\\theta)^{(11-x)-1}d\\theta $  \n",
+    "$ = \\frac{\\Gamma(11)}{\\Gamma(12)} \\int_0^1 \\frac{\\Gamma(12)}{\\Gamma(x+1)\\Gamma(11-x)}\\theta^{(x+1)-1}(1-\\theta)^{(11-x)-1}d\\theta $  \n",
+    "$ = \\frac{\\Gamma(11)}{\\Gamma(12)} \\int_0^1(\\text{PDF Beta}(\\alpha=x+1; \\beta=11-x)) $  \n",
+    "$ = \\frac{\\Gamma(11)}{\\Gamma(12)} \\times 1 = \\frac{1}{11}$  \n",
+    "\n",
+    "Nghĩa là với một đồng xu có xác suất p(head) đều nhau (uniform),  \n",
+    "thì xác suất ra 0,1,.. hoặc 10 heads (11 con số) là bằng nhau"
    ]
   },
   {
@@ -42,16 +51,20 @@
    "metadata": {},
    "source": [
     "# Posterior predictive distribution\n",
-    "Tương tự như prior predictive.  \n",
+    "Tương tự như prior predictive  \n",
     "= PDF x posterior  \n",
-    "$ f(x|\\text{data}) = \\int f(x|\\theta) f(\\theta|\\text{data}) d\\theta $  \n",
+    "$ f(x|y) = \\int f(x|p) f(p|y) dp $  \n",
     "Ví dụ:  \n",
-    "Bernoulli có **data = [1]**  \n",
-    "=> posterior $f(\\theta|\\text{data}) = 2\\theta I_{\\{0 \\leq x \\leq 1 \\}} $ (bài trước)  \n",
-    "posterior predictive distribution.  \n",
-    "$ f(x) = \\int_0^1 \\theta^x (1-\\theta)^{1-x} 2\\theta d\\theta $  \n",
-    "Để ra head next: $ f(x=1) = \\int_0^1 2\\theta^2d\\theta = \\frac{2}{3} $  \n",
-    "Để ra tail next: $ f(x=0) = \\int_0^1 2\\theta(1-\\theta) d\\theta = \\frac{1}{3} $"
+    "Với đồng xu như ví dụ ở trên, ta có data y=1  \n",
+    "Ta tìm posterior tương tự như bài Bayesian inference  \n",
+    "=>$f(p|y=1) = 2p I_{\\{0 \\leq x \\leq 1 \\}} $    \n",
+    "\n",
+    "Ta tính posterior predictive distribution cho lần tung tiếp theo  \n",
+    "$ f(x) =\\int_{-\\infty}^{\\infty} p^x (1-p)^{1-x} 2p I_{\\{0 \\leq x \\leq 1 \\}} dp$  \n",
+    "$= \\int_0^1 p^x (1-p)^{1-x} 2p dp $  \n",
+    "\n",
+    "Để ra head next: $ f(x=1) = \\int_0^1 2p^2dp = \\frac{2}{3} $  \n",
+    "Để ra tail next: $ f(x=0) = \\int_0^1 2p(1-p) d\\theta = \\frac{1}{3} $"
    ]
   },
   {
@@ -60,7 +73,8 @@
    "source": [
     "---\n",
     "# Beta $\\propto$ Bernoulli/binomial $\\times$ beta\n",
-    "<center>Beta($\\alpha$ + k, $\\beta$ +n-k) $\\propto$ Bernoulli/binomial(n,k) $\\times$ beta($\\alpha$, $\\beta$)</center>\n",
+    "**Công thức:**  \n",
+    "Beta($\\alpha$+k, $\\beta$+n-k) $\\propto$ Bernoulli/binomial(n, k) $\\times$ beta($\\alpha$, $\\beta$)\n",
     "\n",
     "Prior\n",
     "- Trong ví dụ đồng xu thì $\\alpha$ là số lần ra head + 1, $\\beta$ là số lần ra tail + 1.\n",
