--- a/unit_4/choosing-prior.ipynb
+++ b/unit_4/choosing-prior.ipynb
@@ -108,8 +108,8 @@
     "# Một xét nghiệm chẩn đoán mới đang nghiên cứu dùng theta là tỉ lệ thất bại trong việc chẩn đoán xác định.\n",
     "# Xét nghiệm này khá đắt, và số tiền được hỗ trợ nghiên cứu chỉ được thử nghiệm trong 20 ca đã có cđxđ.\n",
     "# Gọi X là số ca xét nghiệm thất bại\n",
-    "# Thông thường, một xét nghiệm mới thì đúng 1 ca, sai 1 ca. Prior là beta(2,2)\n",
-    "# Mean = a/(a+b) = 2\n",
+    "# Prior là beta(2,2)\n",
+    "# Mean = a/(a+b) = 0.5\n",
     "# Effective sample size = a+b = 4\n",
     "# Data là 6 ca thất bại, 14 ca chẩn đoán đúng.\n",
     "\n",
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
