--- a/unit_4/choosing-prior.ipynb
+++ b/unit_4/choosing-prior.ipynb
@@ -77,7 +77,7 @@
     "Beta($\\alpha$+k, $\\beta$+n-k) $\\propto$ Bernoulli/binomial(n, k) $\\times$ beta($\\alpha$, $\\beta$)\n",
     "\n",
     "Prior Beta($\\alpha$, $\\beta$)\n",
-    "- Trong ví dụ đồng xu thì $\\alpha$ là số lần ra head + 1, $\\beta$ là số lần ra tail + 1.\n",
+    "- Trong ví dụ đồng xu thì $\\alpha$ là số lần ra head, $\\beta$ là số lần ra tail.\n",
     "- Uniform là beta(1,1), tức là 0 head, 0 tail.\n",
     "\n",
     "Likelihood Bernoulli/Binomial\n",
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
