--- a/unit_4/mot-vai-phan-phoi.ipynb
+++ b/unit_4/mot-vai-phan-phoi.ipynb
@@ -822,7 +822,7 @@
     "# [BETA DISTRIBUTION](https://en.wikipedia.org/wiki/Beta_distribution)\n",
     "Là phân phối random dựa trên X từ (0, 1) với 2 thông số alpha, beta.  \n",
     "Thường được dùng để mô tả xác suất p của biến nhị phân, với  \n",
-    "- $\\alpha=k+1, \\; \\beta=n-k+1$  \n",
+    "- $\\alpha=k, \\; \\beta=n-k$  \n",
     "Ví dụ:  \n",
     "Với đồng xu có p(head) = 0.5 thì beta(0.5, 0.5) có p(head) = p(tail)( p(0)=p(1) ) ( xem đồ thị ). \n",
     "$$ X \\sim \\text{Beta}(\\alpha, \\beta) \\quad \\text{with}\\: \\alpha>0, \\beta>0$$\n",
@@ -956,7 +956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
