--- a/unit_4/non-informative-prior.ipynb
+++ b/unit_4/non-informative-prior.ipynb
@@ -48,10 +48,18 @@
     "--- \n",
     "# Jeffreys prior\n",
     "là priors không bị đổi hình dạng khi theta bị thay đổi thành g(theta). Prior này thích hợp cho scale parameters.  \n",
-    "$f(\\theta) \\propto \\sqrt{I(\\theta)} $  \n",
-    "Với  $\\sqrt{I(\\theta)} $ là fisher information\n",
+    "Jeffreys prior: $ f(\\theta) \\propto \\sqrt{I(\\theta)} $  \n",
+    "Với  $I(\\theta) $ là fisher information\n",
     "\n",
-    "Normal: $f(\\mu) \\propto 1; f(\\sigma^2) \\propto 1/\\sigma^2 $  \n",
+    "$I(\\theta) =\\int \\left( \\frac{\\delta}{\\delta\\theta} log(f(;\\theta))      \\right)^2 f(x;\\theta) dx$  \n",
+    "fisher information càng cao, data có likelihood quanh $\\theta$ cao\n",
+    "\n",
+    "\n",
+    "Normal: \n",
+    "- Known variance $f(\\mu) \\propto 1$\n",
+    "- Unknown variance $f(\\mu, \\sigma^2) \\propto 1/\\sigma^2 $  \n",
+    "\n",
+    "\n",
     "Bernoulli: $f(\\theta) \\propto \\theta^{-1/2}(1-\\theta)^{-1/2} = \\text{beta} (1/2, 1/2) $"
    ]
   },
